football_scotland/airflow/logs/dag_id=intialization_database/run_id=manual__2024-10-01T151925.731918+0000/task_id=copy_data_to_staging_table_fl/attempt=1.log
[2024-10-01T15:20:19.216+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-10-01T15:20:19.245+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: intialization_database.copy_data_to_staging_table_fl manual__2024-10-01T15:19:25.731918+00:00 [queued]>
[2024-10-01T15:20:19.256+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: intialization_database.copy_data_to_staging_table_fl manual__2024-10-01T15:19:25.731918+00:00 [queued]>
[2024-10-01T15:20:19.257+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-10-01T15:20:19.274+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): copy_data_to_staging_table_fl> on 2024-10-01 15:19:25.731918+00:00
[2024-10-01T15:20:19.282+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=4054) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-10-01T15:20:19.284+0000] {standard_task_runner.py:63} INFO - Started process 4056 to run task
[2024-10-01T15:20:19.284+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'intialization_database', 'copy_data_to_staging_table_fl', 'manual__2024-10-01T15:19:25.731918+00:00', '--job-id', '3025', '--raw', '--subdir', 'DAGS_FOLDER/initialization.py', '--cfg-path', '/tmp/tmp1qlbf1wn']
[2024-10-01T15:20:19.286+0000] {standard_task_runner.py:91} INFO - Job 3025: Subtask copy_data_to_staging_table_fl
[2024-10-01T15:20:19.341+0000] {task_command.py:426} INFO - Running <TaskInstance: intialization_database.copy_data_to_staging_table_fl manual__2024-10-01T15:19:25.731918+00:00 [running]> on host f8103d9b7858
[2024-10-01T15:20:19.470+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='intialization_database' AIRFLOW_CTX_TASK_ID='copy_data_to_staging_table_fl' AIRFLOW_CTX_EXECUTION_DATE='2024-10-01T15:19:25.731918+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-01T15:19:25.731918+00:00'
[2024-10-01T15:20:19.472+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-10-01T15:20:19.473+0000] {sql.py:276} INFO - Executing: /copy scottish_premiership.staging_table_fl
FROM '/opt/***/dags/csvs/first_load_csvs/all_sources_merged_transformed.csv'
DELIMITER ','
CSV HEADER;
[2024-10-01T15:20:19.483+0000] {base.py:84} INFO - Using connection ID 'football_scotland_connection' for task execution.
[2024-10-01T15:20:19.495+0000] {base.py:84} INFO - Using connection ID 'football_scotland_connection' for task execution.
[2024-10-01T15:20:19.501+0000] {sql.py:487} INFO - Running statement: /copy scottish_premiership.staging_table_fl
FROM '/opt/***/dags/csvs/first_load_csvs/all_sources_merged_transformed.csv'
DELIMITER ','
CSV HEADER;, parameters: None
[2024-10-01T15:20:19.503+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-10-01T15:20:19.504+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "/"
LINE 1: /copy scottish_premiership.staging_table_fl
        ^

[2024-10-01T15:20:19.515+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=intialization_database, task_id=copy_data_to_staging_table_fl, run_id=manual__2024-10-01T15:19:25.731918+00:00, execution_date=20241001T151925, start_date=20241001T152019, end_date=20241001T152019
[2024-10-01T15:20:19.531+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 3025 for task copy_data_to_staging_table_fl (syntax error at or near "/"
LINE 1: /copy scottish_premiership.staging_table_fl
        ^
; 4056)
[2024-10-01T15:20:19.581+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-10-01T15:20:19.599+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-10-01T15:20:19.601+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
